--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet"/>
+    <!-- JS scripts -->
+    <script src="../js/show_hide_passwd.js" type="text/javascript"></script>
     <!-- JS Imports -->
     <script src="../js/bootstrap.bundle.min.js"></script>
     <!-- CDN -->
@@ -21,8 +23,9 @@
 <!-- TODO: change fontawsome CDN into css file -->
 <body class="d-flex flex-column min-vh-100">
         <!-- Header of the page (nav, search, login, language, cart) -->
+       
         <header id="headerTop">
-            <div class="navbar navbar-expand-lg d-flex navbar-dark justify-content-between">
+            <div class="navbar navbar-expand-lg d-flex navbar-light justify-content-between">
                 <div>
                     <a class="navbar-brand mx-5" href="../html/index.html">
                         <img class="" src="../img/os-logo.webp" alt="Impossible d'afficher le logo">
@@ -80,9 +83,12 @@
                                         <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
                                         <label for="email">Email</label>
                                         </div>
-                                        <div class="form-floating mt-3 mb-3">
-                                        <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd" required>
-                                        <label for="pwd">Password</label>
+                                        <div class="input-group mt-3 mb-3">
+                                            <div class="form-floating form-floating-group flex-grow-1">
+                                                <input type="password" class="form-control rounded-0 rounded-start" id="pwd1" placeholder="Enter password" name="pswd" required>
+                                                <label for="pwd1">Mot de passe</label>    
+                                            </div>                                        
+                                            <button type="button" class="btn rounded-end input-group-text shadow-none hideShowPassword" id="" onclick="showPassword(this)"><i class="fa-solid fa-eye"></i></button>
                                         </div>
                                         <input type="checkbox" name="checkbx" id="rememberMe" class="form-check-input mb-4"> <label for="rememberMe"> Se souveir de moi</label><br>
                                         <button type="submit" class="btn btn-outline-success float-end">Se connecter</button>
@@ -114,17 +120,23 @@
                                         <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
                                         <label for="email">Email</label>
                                     </div>
-                                    <div class="form-floating mt-3 mb-3">
-                                        <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd" required>
-                                        <label for="pwd">Mot de passe</label>
-                                </div>
-                                <div class="form-floating mt-3 mb-3">
-                                    <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd" required>
-                                    <label for="pwd">Confirmer le mot de passe</label>
+                                    <div class="input-group mt-3 mb-3">
+                                        <div class="form-floating form-floating-group flex-grow-1">
+                                            <input type="password" class="form-control rounded-0 rounded-start" id="pwd1" placeholder="Enter password" name="pswd" required>
+                                            <label for="pwd1">Mot de passe</label>    
+                                        </div>                                        
+                                        <button type="button" class="btn rounded-end input-group-text shadow-none hideShowPassword" id="" onclick="showPassword(this)"><i class="fa-solid fa-eye"></i></button>
                                     </div>
-                            <input type="checkbox" id="conditions" class="form-check-input mb-5" required> <label for="conditions"> J'ai lu et j'accepte les <a href="#">conditions d'utilisation</a></label>
+                                    <div class="input-group mt-3 mb-3">
+                                        <div class="form-floating form-floating-group flex-grow-1">
+                                            <input type="password" class="form-control rounded-0 rounded-start" id="pwd2" placeholder="Enter password" name="pswd" required>
+                                            <label for="pwd2">Confirmer le mot de passe</label>    
+                                        </div>                                        
+                                        <button type="button" class="btn rounded-end input-group-text shadow-none hideShowPassword" onclick="showPassword(this)"><i class="fa-solid fa-eye"></i></button>
+                                    </div>
+                                    <input type="checkbox" id="conditions" class="form-check-input mb-5" required> <label for="conditions"> J'ai lu et j'accepte les <a href="#">conditions d'utilisation</a></label>
                                     <button type="submit" class="btn btn-outline-success float-end mt-5">Se connecter</button>
-                                </form>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -155,20 +167,46 @@
                 <li><a class="nav-link text-light rounded" href="../html/blog.html">Blog</a></li>
             </nav>
         </header>
-
+        <div id="top"></div>
         <!-- Definition and connexion section -->
-        <section class="container-fluid row-xxl row" id="firstSec">
-            <article class="col-sm col-lg-7 m-3 p-5">
-                <h1 class="mb-3">Bienvenue a <span class="name">ORDISHOP</span></h1>
-                <p>Votre portail pour acheter <br><span class="text-success font-weight-bold bg-light p-1 rounded">des ordinateurs de haute gamme</span></p>          
-                <p>Avec des prix convenient et <br><span class="text-success font-weight-bold bg-light p-1 rounded">des coffrets pour chaque budget</span></p>          
-            </article>
-            <article class="col-sm col-lg m-3 p-5">
-                <p>Pour beneficier de toutes les fonctionalites de <span class="name">ORDISHOP</span> connecter<br>vous a votre compte</p>
-                <button type="button" class="rounded-pill btn me-5" data-bs-toggle="modal" data-bs-target="#signupModal">Creer Compte</button>
-                <button type="button" class="rounded-pill btn" data-bs-toggle="modal" data-bs-target="#LoginModal">Se connecter</button>
-            </article>
-        </section>
+        <section id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../img/banner-os.webp" height="500px" class="d-block w-100" alt="Impossible d'afficher l'image">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Bienvenue a ordishop</h5>
+                  <p>Votre portail pour acheterdes ordnateurs de haute gamme avec des prix convenient pour chaue budget</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="../img/banner-os.webp" height="500px" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="../img/banner-os.webp" height="500px" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </section>
         <!-- Suppliers section -->
         <section class="container-fluid" id="supSec">
             <article class="m-3 p-5">
@@ -239,7 +277,7 @@
         <footer>
             <div id="footerTopSection" class="py-3">
                 <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 178"><defs><style>.cls-1{fill:#0d1840;}</style></defs><path class="cls-1" d="M1920,515H0V337l932,46.6q28,1.39,56,0L1920,337Z" transform="translate(0 -337)"/></svg>
-                <a href="#headerTop" class="fa-solid fa-circle-up p-2"> </a>
+                <a href="#top" class="fa-solid fa-circle-up p-2"> </a>
                 <span>Retour en haut</span>
             </div>
             <div id="footerMiddleSection" class="px-4 pb-4">
