--- a/html/nos-ord.html
+++ b/html/nos-ord.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet"/>
+    <!-- JS scripts -->
+    <script src="../js/show_hide_passwd.js" type="text/javascript"></script>
     <!-- JS Imports -->
     <script src="../js/bootstrap.bundle.min.js"></script>
     <!-- CDN -->
@@ -17,7 +19,8 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
     <!-- Header of the page (nav, search, login, language, cart) -->
-    <header id="headerTop">
+    <div id="headerTop"></div>
+    <header class="sticky-top">
         <div class="navbar navbar-expand-lg d-flex navbar-dark justify-content-between">
             <div>
                 <a class="navbar-brand mx-5" href="../html/index.html">
@@ -151,7 +154,7 @@
             <li><a class="nav-link text-light rounded" href="../html/blog.html">Blog</a></li>
         </nav>
     </header>
-
+    lorem20
     <!-- Footer (quick links, language, login) -->
     <footer class="mt-auto">
         <div id="footerTopSection" class="py-3">
