--- a/html/qsn.html
+++ b/html/qsn.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../css/qsn.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet"/>
+    <!-- JS scripts -->
+    <script src="../js/show_hide_passwd.js" type="text/javascript"></script>
     <!-- JS Imports -->
     <script src="../js/bootstrap.bundle.min.js"></script>
     <!-- CDN -->
@@ -18,7 +20,8 @@
 </head>
 <body class="d-flex flex-column min-vh-100">
     <!-- Header of the page (nav, search, login, language, cart) -->
-    <header id="headerTop">
+    <div id="headerTop"></div>
+    <header class="sticky-top">
         <div class="navbar navbar-expand-lg d-flex navbar-dark justify-content-between">
             <div>
                 <a class="navbar-brand mx-5" href="../html/index.html">
